assets/css/styles.css
/*Color pallete*/
/*
#313638 - Onyx
#C6C8C8 - Lavender Gray (box shadows)
#F09D51 - Sandy Brown
#E0DFD5 - Gainsboro
#E8E9EB - Platinum
#F06543 - Tomato
*/

body
{
    background-color: #E8E9EB;
    font-family: 'Roboto', sans-serif;
    line-height: 1.75em;
}

#mainSect
{
    width: 100%;
}

#mainContent
{
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    padding-top: 4em;
}

/*Nav*/

#navbar
{
    width: 100%;
    display: flex;
    justify-content: center;
}

#navigationElem a 
{
    padding: 0.25em;
}

/*Mobile*/
@media only screen and (max-width: 1024px) 
{
    #navigationElem
    {
        display: flex;
        position: fixed;
        justify-content: center;
        top: 0;
        width: 100%;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        background-color: #FBFBFB;
        padding-top: 1em;
        padding-bottom: 1em;
        font-size: 1.15em;
    }

    #general
    {
        width: 99%;
    }

    #contact
    {
        margin: 1em;
        width: 99%;
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        display: flex;
        flex-direction: column;
        align-items: center;

    }

    #blogIntro
    {
        margin-top: 1em;
        width: 99%;
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #post
    {
        margin-top: 1em;
        width: 99%;
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #skills
    {
        padding: 1em;  
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        display: flex;
        align-items: center;
        flex-direction: column;
        font-size: 1.15em;
    }

    #listWrapper
    {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
    }

    #skills ul
    {
        width: 90%;
        background-color: #FBFBFB;
        margin: 1em;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        list-style-type: none;
    }

    #introWrapper
    {
        margin-top: 1em;
        margin-bottom: 1em;
    }

    #skillsWrapper
    {
        margin-top: 1em;
        margin-bottom: 1em;
    }

    #projects
    {     
        align-items: center;
        padding: 1em;  
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        font-size: 1em;
    }

    #projects ul
    {
        display: flex;
        text-align: left;
        align-items: center;
        flex-direction: column;
        margin-left: -2.5em; 
    }

    #projects li
    {
        width: 90%;
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        padding: 1em;
        margin: 1em;
        list-style-type: none;
    }
}

/*Desktop*/
@media only screen and (min-width: 1025px)
{
    #navigationElem
    {
        display: flex;
        justify-content: flex-end;
        position: fixed;
        top: 0;
        width: 100%;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        background-color: #FBFBFB;
        padding-top: 1em;
        padding-right: 10em;
        padding-bottom: 1em;
        font-size: 1.15em;
    }

    /*Main page styles*/
    #general
    {
        width: 50%;
    }

    #contact
    {
        margin-top: 1em;
        width: 50%;
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        display: flex;
        flex-direction: column;
        align-items: center;

    }

    #blogIntro
    {
        margin-top: 1em;
        width: 50%;
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #post
    {
        margin-top: 1em;
        width: 50%;
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    /*Home page styles*/
    #listWrapper
    {
        display: flex;
        flex-direction: row;
        justify-content: center;
        width: 100%;
    }

    #skills ul
    {
        width: 100%;
        background-color: #FBFBFB;
        margin: 1em;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-content: center;
        list-style-type: none;
    }

    #introWrapper
    {
        margin-top: 1em;
        margin-bottom: 1em;
    }

    #skillsWrapper
    {
        margin-top: 1em;
        margin-bottom: 1em;
    }

    #projects
    {     
        padding: 1em;  
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        font-size: 1em;
    }

    #projects ul
    {
        display: flex;
        text-align: left;
        justify-content: center;
        flex-wrap: wrap;
        flex-direction: row;
        margin-left: -2.5em; 
    }

    #projects li
    {
        width: 40%;
        background-color: #FBFBFB;
        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
        padding: 1em;
        margin: 1em;
        list-style-type: none;
    }
}

#intro
{
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 1em;
    background-color: #FBFBFB;
    box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
}

#contactMe
{
    box-shadow: 3px 4px 0px 0px #DB5C3D;
    background-color: #F06543;
    border: 1px solid #DB5C3D;
    cursor: pointer;
    color: #313638;
    padding: 0.75em;
    min-width: 5%;
    text-align: center;
}


.headElem
{
    font-weight: normal;
}

.headElem span
{
    border-bottom: 0.25em solid #F06543; 
}

#introIcons
{
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#introIcons div
{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 0.5em;
    margin-right: 0.5em;
    width: 10%;
}

#introIcons div a
{
    display: flex;
    justify-content: center;
    align-items: center;
}

#introIcons img
{
    width: 60%;
}

#intro h1
{
    color: #F06543;
}

#intro h2
{
    font-size: 1.15em;
    width: 85%;
}

#intro h3
{
    font-size: 1em;
    width: 95%;
}

#skills h3
{
    font-size: 1em;
    width: 95%;
}

#skills li
{
    font-size: 1em;
    margin-left: -2.5em; 
}

#skills
{
    padding: 1em;  
    background-color: #FBFBFB;
    box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
    display: flex;
    align-items: center;
    text-align: center;
    flex-direction: column;
    font-size: 1em;
}

#listWrapper li
{
    padding: 0.25em;
}

#projectWrapper
{
    width: 100%;
    display: flex;
    justify-content: center;
}

#projects li div
{
    box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
    background-color: #313638;
    padding: 1em;
    margin-left: -1em;
    margin-right: -1em;
    margin-bottom: -1em;
    margin-top: 1em;
    min-height: 16em;
    color: #fbfbfb;
}

#projects a
{
    text-decoration: none;
    border-bottom: 0.25em solid #F06543; 
}

/*Contact*/
#mainContact
{
    width: 100%;
    display: flex;
    justify-content: center;
}

#contact h1
{
    padding-top: 1em;
    color: #F06543;
    font-size: 1.5em;
}

#contact form
{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1em;
}

#contact span
{
    color: #F06543;
}

#contact input
{
    font-size: 1em;
    width: 100%;
}

#contactInputMessage
{
    font-size: 1.25em;
}

/*Blog wrapper page*/
#blogPageWrapper
{
    width: 100%;
    display: flex;
    justify-content: center;
}

#blogIntroWrapper
{
    display: flex;
    flex-direction: column;
    align-items: center;
}

#marginWrap
{
    margin: 1em;

}

#blogPagePostTitle
{
    font-size: 0.75em;
}

#blogPageDate
{
    font-size: 1em;
}

#marginWrap h1
{
    font-weight: normal;
    font-size: 1em;
}

#marginWrap h3
{
    font-size: 1em;
    width: 95%;
}

#marginWrap h1
{
    font-size: 1.5em;
}

#blogIntro ul a
{
    font-size: 2em;
    text-decoration: none;
    border-bottom: 0.25em solid #F06543; 
}

#blogIntro ul
{
    margin-left: -2.5em;
}

#blogIntroWrapper h1
{
    color: #F06543;
}

#blogPageExcerpt 
{
    background-color: #fbfbfb;
    box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
    padding: 1em;
    margin-bottom: 1em;
}

#blogPageExcerpt p
{
    font-size: 0.5em;
    color: #313638;
}

#blogPageExcerpt
{
    font-size: 0.5em;
    font-weight: normal;
    color: #313638;
} 

#blogIntro li
{
    list-style-type: none;
}

#divider
{
    width: 100%;
    background-color: #F06543;
    margin-top: 2em;
    margin-bottom: 2em;
    height: 1px;
}

/*Blog post page*/
#postWrapper
{
    width: 100%;
    display: flex;
    justify-content: center;
}

#postMarginWrap
{
    width: 90%;
    margin-bottom: 1em;
    margin-top: 1em;
}

#postMarginWrap em
{
    font-size: 1em;
}

#postMarginWrap a
{
    text-decoration: none;
    border-bottom: 0.25em solid #F06543; 
}

#postDate
{
    font-size: 0.7em;
    margin-top: -1em;
}

#postDate span
{
    font-size: 1.15em;
    color: #F06543;
}

#postMarginWrap h1, h2, h3, h4, h5, h6
{
    font-weight: normal;
}

